--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,9 @@
 	</head>
 	<body>
 		<div id="container">
+			<div id="cabecera">
+				Cabecera
+			</div>
 			<div id="post">
 				<h1>Este es el título atractivo e intersante del Post</h1>
 				<p>Este es el párrafo de inicio</p>
