--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,8 @@
 		<div id="container">
 			<div id="post">
 				<h1>Este es el título atractivo e intersante del Post</h1>
-				<p>Este es el párrafo de inicio</p>
+				<p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
+				<p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtue. Excepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora.</p>
 			</div>
 		</div>
 	</body>
