--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 	<body>
 		<div id="container">
 			<div id="cabecera">
-				Hyperblog <span id="tagline">Tu blog d econfianza</span>
+				Hyperblog <span id="tagline">Tu blog de cabecera</span>
 			</div>
 			<div id="post">
 				<h1>Este es el título atractivo e intersante del Post</h1>
