--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,7 @@
 				<h1>Este es el título atractivo e intersante del Post</h1>
 				<p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
 				<p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtue. Excepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora.</p>
+				<p>Otro párrafo adicional</p>
 			</div>
 		</div>
 	</body>
